--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "flat": true,
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/traverse": "7.1.6",
     "@babel/types": "7.2.0",
     "@types/node": "^10.12.11",
-    "dopees-chain": "artyomszasa/dopees-chain",
+    "dopees-chain": "file://../dopees-chain",
     "ts-node": "7.0.1",
     "typescript": "3.1.6"
   }
