--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/traverse": "7.1.6",
     "@babel/types": "7.2.0",
     "@types/node": "^10.12.11",
-    "dopees-chain": "file://../dopees-chain",
+    "dopees-chain": "artyomszasa/dopees-chain",
     "ts-node": "7.0.1",
     "typescript": "3.1.6"
   }
