--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "author": "",
   "license": "MIT",
   "flat": true,
-  "devDependencies": {
-    "@babel/core": "7.2.0",
+  "dependencies": {
+    "@babel/core": "7.2.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/traverse": "7.1.6",
-    "@babel/types": "7.2.0",
+    "@babel/traverse": "7.2.3",
+    "@babel/types": "7.2.2",
+    "dopees-chain": "artyomszasa/dopees-chain#master"
+  },
+  "devDependencies": {
     "@types/node": "^10.12.11",
-    "dopees-chain": "artyomszasa/dopees-chain",
     "ts-node": "7.0.1",
-    "typescript": "3.1.6"
+    "typescript": "3.2.2"
   }
 }
